syntax = "proto3";

import "protocol.proto";

//#options
option java_multiple_files = true;
option java_package = "sharding.grpc";
option java_outer_classname = "ClientService";

package sharding.grpc;
//#options

//#services
service GreeterService {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

//#services